--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,26 +8,29 @@
 
 </head>
 <body>
-<h1>Our Team</h1>
+<h1>El Tridente</h1>
 
-<div class="row col-lg-4 col-md-6">
+<div class="row col-lg-4 col-md-6 col-sd-12">
+<div>
   <p id="p1" >Messi</p>
  
-  <section>This is regular content continuing after the the paragraph boxes.wewewewewewewe</section>
+  <section>Lionel Andrés Messi Cuccittini, conocido como Leo Messi, es un futbolista argentino que juega como delantero en el Fútbol Club Barcelona y en la selección Argentina</section>
 </div>
-
-<div class="row col-lg-4 col-md-6">
+</div>
+<div class="row col-lg-4 col-md-6 col-sd-12">
+  <div>
   <p id="p2">Neymar</p>
  
-  <section>This is regular content continuing after the the paragraph boxes.  6565656ttr</section>
+  <section>Luis Alberto Suárez Díaz es un futbolista uruguayo que juega como delantero y su equipo actual es el Fútbol Club Barcelona de la Primera División de España</section>
 </div>
-
-<div class="row col-lg-4 col-md-12">
+</div>
+<div class="row col-lg-4 col-md-12 col-sd-12">
+  <div>
   <p id="p3" >Suarez</p>
  
-  <section>This is regular content continuing after the the paragraph boxes.rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr</section>
+  <section>Neymar da Silva Santos Júnior, conocido como Neymar es un futbolista brasileño que juega como extremo izquierdo y su equipo actual es el Fútbol Club Barcelona</section>
 </div>
-
+</div>
 
 </body>
 </html>
